corrigidas aulas 8-12 figuras, referencias e outros

--- a/AED/Aulas_Fonte_Professor/Aula10/secoes/Grafos/grafos.tex
+++ b/AED/Aulas_Fonte_Professor/Aula10/secoes/Grafos/grafos.tex
@@ -18,8 +18,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/grafoNaoDirigido.jpg}
-			\caption{Exemplo de grafo não dirigido}
-			\label{fig_pilha}
+			\caption{Exemplo de grafo não dirigido \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -30,8 +29,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=7cm, width = 9cm]{./pic/exemploGrafo.jpg}
-			\caption{Exemplo de grafo não dirigido}
-			\label{fig_pilha}
+			\caption{Exemplo de grafo não dirigido \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -55,8 +53,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=4cm, width = 9cm]{./pic/matrizAdjacencia.jpg}
-			\caption{Grafo representação por matriz de adjacência}
-			\label{fig_pilha}
+			\caption{Grafo representação por matriz de adjacência \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -77,8 +74,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=4cm, width = 9cm]{./pic/listaAdjacencia.jpg}
-			\caption{Grafo representação por lista de adjacências}
-			\label{fig_pilha}
+			\caption{Grafo representação por lista de adjacências \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -117,8 +113,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=4cm, width = 9cm]{./pic/ciclo.jpg}
-			\caption{Grafo com ciclo}
-			\label{fig_pilha}
+			\caption{Grafo com ciclo \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -129,8 +124,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/arvoreGrafo.jpg}
-			\caption{Grafo com ciclo}
-			\label{fig_pilha}
+			\caption{Grafo com ciclo \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -141,8 +135,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/grafoArvore2.jpg}
-			\caption{Grafo com ciclo}
-			\label{fig_pilha}
+			\caption{Grafo com ciclo \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -173,7 +166,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs1.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -183,7 +176,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs2.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -193,7 +186,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs3.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -203,7 +196,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs4.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -213,7 +206,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs6.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -223,7 +216,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs7.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -233,7 +226,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs8.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -243,7 +236,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs9.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -253,7 +246,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs10.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -263,7 +256,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/bfs11.png}
-			\caption{Grafo busca em largura}
+			\caption{Grafo busca em largura \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -294,7 +287,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs1.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -304,7 +297,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs2.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -314,7 +307,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs3.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -324,7 +317,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs4.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -334,7 +327,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs5.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -344,7 +337,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs6.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -354,7 +347,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs7.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -364,7 +357,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs8.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -374,7 +367,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/dfs9.png}
-			\caption{Grafo busca em profundidade}
+			\caption{Grafo busca em profundidade \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -394,7 +387,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/DAGSemCiclo.jpg}
-			\caption{Grafos mais definições}
+			\caption{Grafos mais definições \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -405,7 +398,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/DAGSemCiclo.jpg}
-			\caption{Grafos mais definições}
+			\caption{Grafos mais definições \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -416,7 +409,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/DAGSemCiclo.jpg}
-			\caption{Grafos mais definições}
+			\caption{Grafos mais definições \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -440,7 +433,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/Fig-11.jpg}
-			\caption{Grafos caminhos mínimos}
+			\caption{Grafos caminhos mínimos \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -450,8 +443,8 @@
 		Inicializa o vetor de distâncias para cada vértice com infinito menos o vértice escolhido como \emph{fonte}. Em seguida, actualize a distância dos vertices adjacentes
 		\begin{figure}[!htb]
 			\centering	  
-			\includegraphics[height=4cm, width = 9cm]{./pic/MST1.jpg}
-			\caption{Grafos Dijsktra}
+			\includegraphics[height=3cm, width = 5cm]{./pic/MST1.jpg}
+			\caption{Grafos Dijsktra \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -462,7 +455,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/DIJ2.jpg}
-			\caption{Grafos Dijsktra}
+			\caption{Grafos Dijsktra \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -473,7 +466,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/DIJ3.jpg}
-			\caption{Grafos Dijsktra}
+			\caption{Grafos Dijsktra \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -484,7 +477,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/DIJ4.jpg}
-			\caption{Grafos Dijsktra}
+			\caption{Grafos Dijsktra \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -495,7 +488,7 @@
 		\begin{figure}[!htb]
 			\centering	  
 			\includegraphics[height=4cm, width = 9cm]{./pic/DIJ5.jpg}
-			\caption{Grafos Dijsktra}
+			\caption{Grafos Dijsktra \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
