--- a/AED/Aulas_Fonte_Professor/Aula11/Aula11_AED.tex
+++ b/AED/Aulas_Fonte_Professor/Aula11/Aula11_AED.tex
@@ -2,7 +2,7 @@
 
 \include{meta}
 
-\title[AED - Aula 09]{Técnicas de programação para Games \\ Aula10 \\ Grafos}
+\title[AED - Aula 11]{Técnicas de programação para Games \\ Aula11 \\ Heap's}
 \author{Professor Mestre: Adilson Lopes Khouri}
 
 \begin{document}
