--- a/AED/Aulas_Fonte_Professor/Aula11/secoes/Heaps/heaps.tex
+++ b/AED/Aulas_Fonte_Professor/Aula11/secoes/Heaps/heaps.tex
@@ -17,8 +17,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/heap.jpg}
-			\caption{Exemplo de Heap}
-			\label{fig_pilha}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -40,9 +39,8 @@
 	\begin{block}{Heap}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/binaryheap.png}
-			\caption{Exemplo de Heap}
-			\label{fig_pilha}
+			\includegraphics[height=6cm, width = 9cm]{./pic/binaryheap.png}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -106,7 +104,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/g127-9.png}
-			\caption{Exemplo de Heap}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -117,24 +115,23 @@
 		Em nenhum desses casos precisamos alterar a árvore.
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/g2755.png}
-			\caption{Exemplo de Heap}
+			\includegraphics[height=3cm, width = 9cm]{./pic/g127-9.png}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 
-%\begin{frame}
-%	\begin{block}{Exemplo de heapficação}
-%		Ao aplicar a heapificação para a raiz percebemos que há necessidade de trocar valores.
-%		\begin{figure}[!htb]
-%			\centering	  				
-%			\includegraphics[height=3cm, width = 9cm]{./pic/g2755.png}
-%			\caption{Exemplo de Heap}
-%			\label{fig_pilha}
-%		\end{figure}
-%	\end{block}
-%\end{frame}
+\begin{frame}
+	\begin{block}{Exemplo de heapficação}
+		Ao aplicar a heapificação para a raiz percebemos que há necessidade de trocar valores.
+		\begin{figure}[!htb]
+			\centering	  				
+			\includegraphics[height=3cm, width = 9cm]{./pic/g2755.png}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
+		\end{figure}
+	\end{block}
+\end{frame}
 
 
 \begin{frame}{}
@@ -147,7 +144,7 @@
 		                showcontrols%
 					] 
 		  {\includegraphics[width=5cm, height = 6cm]{./pic/heapImagePoster.png}}{./pic/heap-sort.mov}
-		  \caption{Exemplo de ordenação com o Insertion Sort}
+		  \caption{Exemplo de ordenação com o Heap Sort \cite{GEEKS_2018}}
 	 \end{figure} 
 \end{frame}
 
@@ -156,8 +153,8 @@
 	\begin{block}{Exemplo de uso do HeapSort}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/scene01081.jpg}
-			\caption{Exemplo de Heap}
+			\includegraphics[height=6cm, width = 9cm]{./pic/scene005051.jpg}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -166,8 +163,19 @@
 	\begin{block}{Exemplo de uso do HeapSort}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/scene01297.jpg}
-			\caption{Exemplo de Heap}
+			\includegraphics[height=6cm, width = 9cm]{./pic/scene007931.jpg}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
+		\end{figure}
+	\end{block}
+\end{frame}
+
+
+\begin{frame}
+	\begin{block}{Exemplo de uso do HeapSort}
+		\begin{figure}[!htb]
+			\centering	  				
+			\includegraphics[height=6cm, width = 9cm]{./pic/scene01081.jpg}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -176,8 +184,8 @@
 	\begin{block}{Exemplo de uso do HeapSort}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/scene01513.jpg}
-			\caption{Exemplo de Heap}
+			\includegraphics[height=6cm, width = 9cm]{./pic/scene01297.jpg}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -186,8 +194,8 @@
 	\begin{block}{Exemplo de uso do HeapSort}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/scene02449.jpg}
-			\caption{Exemplo de Heap}
+			\includegraphics[height=6cm, width = 9cm]{./pic/scene01513.jpg}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -196,21 +204,14 @@
 	\begin{block}{Exemplo de uso do HeapSort}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/scene005051.jpg}
-			\caption{Exemplo de Heap}
+			\includegraphics[height=6cm, width = 9cm]{./pic/scene02449.jpg}
+			\caption{Exemplo de Heap \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
-\begin{frame}
-	\begin{block}{Exemplo de uso do HeapSort}
-		\begin{figure}[!htb]
-			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/scene007931.jpg}
-			\caption{Exemplo de Heap}
-		\end{figure}
-	\end{block}
-\end{frame}
+
+
 
 \begin{frame}
 	\begin{block}{Grafos}
