--- a/AED/Aulas_Fonte_Professor/Aula12/Aula12_AED.tex
+++ b/AED/Aulas_Fonte_Professor/Aula12/Aula12_AED.tex
@@ -2,7 +2,7 @@
 
 \include{meta}
 
-\title[AED - Aula 09]{Técnicas de programação para Games \\ Aula10 \\ Grafos}
+\title[AED - Aula 12]{Técnicas de programação para Games \\ Aula12 \\ Prova}
 \author{Professor Mestre: Adilson Lopes Khouri}
 
 \begin{document}
