--- a/AED/Aulas_Fonte_Professor/Aula12/secoes/Prova/prova.tex
+++ b/AED/Aulas_Fonte_Professor/Aula12/secoes/Prova/prova.tex
@@ -4,7 +4,8 @@
 	\begin{block}{}
 		\begin{itemize}
 			\item 40 minutos para tirar dúvidas.
-			\item Avaliação do professor (enve para o representante de sala [não se identifique!])
+			\item Avaliação do professor (envie para o representante de sala)
+			\item Não se identifique!
 			\item Prova
 		\end{itemize}
 	\end{block}
