--- a/AED/Aulas_Fonte_Professor/Aula8/secoes/Hash/hash.tex
+++ b/AED/Aulas_Fonte_Professor/Aula8/secoes/Hash/hash.tex
@@ -18,9 +18,9 @@
 		\begin{itemize}
 			\item Desenhar na lousa.
 
-			\item Citar o exemplo de números: $D = {(1, "um"), (2, "dois"), (3, "três"), (4,"quatro"), (5,"cinco"), (6,"seis"), (7, "sete"), (8, "oito") }$ .
+			\item Citar o exemplo de números: $D = {(1, "um"), (2, "dois"), \ldots (7, "sete"), (8, "oito") }$ .
 				
-			\item Citar o exemplo de palavras: Queremos construir um dicionário dinâmico simplificado, com 4 palavras de no máximo $8$ letras. Este dicionário dinâmico pode ter somente as seguintes palavras: "concha", "casa", "hospital" e "time".
+			\item Citar o exemplo de palavras: Queremos construir um dicionário dinâmico simplificado, com $4$ palavras de no máximo $8$ letras. Este dicionário dinâmico pode ter somente as seguintes palavras: "concha", "casa", "hospital" e "time".
 
 		\end{itemize}
 	\end{block}
@@ -76,67 +76,61 @@
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/hashChaining11.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/hashChaining11.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/hashChaining12.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/hashChaining12.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/hashChaining13.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/hashChaining13.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/hashChaining14.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 5cm]{./pic/hashChaining14.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/hashChaining15.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 5cm]{./pic/hashChaining15.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/hashChaining16.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 5cm]{./pic/hashChaining16.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -207,8 +201,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=2cm, width = 7cm]{./pic/sondagemLinearCode.jpg}
-			\caption{Sondagem Linear}
-			\label{fig_pilha}
+			\caption{Sondagem Linear  \cite{GEEKS_2018}}
 		\end{figure}
 				
 		\begin{itemize}	
@@ -229,67 +222,61 @@
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/openAddressing11Linear.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/openAddressing11Linear.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/openAddressing12Linear.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/openAddressing12Linear.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/openAddressing13Linear.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/openAddressing13Linear.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/openAddressing14Linear.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/openAddressing14Linear.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/openAddressing15Linear.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/openAddressing15Linear.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Pilhas}
+	\begin{block}{Endereçamento aberto}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/openAddressing16Linear.png}
-			\caption{Endereçamento aberto}
-			\label{fig_pilha}
+			\includegraphics[height=3cm, width = 3cm]{./pic/openAddressing16Linear.png}
+			\caption{Endereçamento aberto  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -303,9 +290,8 @@
 		\end{itemize}
 				\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/quadratic.jpg}
-			\caption{Endereçamento aberto quadrático}
-			\label{fig_pilha}
+			\includegraphics[height=2cm, width = 6cm]{./pic/quadratic.jpg}
+			\caption{Endereçamento aberto quadrático  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -328,9 +314,8 @@
 		\end{itemize}
 				\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/doubleHash.jpg}
-			\caption{Hash Duplo}
-			\label{fig_pilha}
+			\includegraphics[height=2cm, width = 6cm]{./pic/doubleHash.jpg}
+			\caption{Hash Duplo  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
