--- a/AED/Aulas_Fonte_Professor/Aula9/secoes/Arvores/arvores.tex
+++ b/AED/Aulas_Fonte_Professor/Aula9/secoes/Arvores/arvores.tex
@@ -28,8 +28,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/arvoreCompletaComun.png}
-			\caption{Exemplo de árvore binária de busca}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore binária de busca \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -57,8 +56,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/arvoreCompleta.jpg}
-			\caption{Exemplo de árvore balanceada}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore balanceada \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -72,8 +70,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/arvoresAssimetricas.jpg}
-			\caption{Exemplo de árvore desbalanceada}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore desbalanceada \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -93,8 +90,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/passeioArvore.png}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -108,14 +104,13 @@
 			\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/passeioArvore.png}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 			\end{block}
 \end{frame}
 			
 \begin{frame}[fragile]
-	\begin{block}{Alter}
+	\begin{block}{}
 		Imprimir árvore em ordem:
 				\inputminted[linenos,
 									fontsize=\footnotesize,
@@ -137,14 +132,13 @@
 			\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/passeioArvore.png}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 			\end{block}
 \end{frame}
 
 \begin{frame}[fragile]
-	\begin{block}{Alter}
+	\begin{block}{}
 		Imprimir árvore pós-ordem:
 				\inputminted[linenos,
 									fontsize=\footnotesize,
@@ -167,14 +161,13 @@
 			\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/passeioArvore.png}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 			\end{block}
 \end{frame}
 
 \begin{frame}[fragile]
-	\begin{block}{Alter}
+	\begin{block}{}
 		Imprimir árvore pré-ordem:
 				\inputminted[linenos,
 									fontsize=\footnotesize,
@@ -207,8 +200,7 @@
 			\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/BSTSearch.png}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 			\end{block}
 \end{frame}
@@ -234,8 +226,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/insercao.jpg}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -264,8 +255,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/delecao1.jpg}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -278,8 +268,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/delecao2.jpg}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -292,8 +281,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/delecao3.jpg}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -303,8 +291,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/delecao3.jpg}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -314,8 +301,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/BSTDelete.png}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -325,8 +311,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/BSTDelete-2.png}
-			\caption{Exemplo de árvore}
-			\label{fig_pilha}
+			\caption{Exemplo de árvore \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -362,8 +347,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/leftleft.jpg}
-			\caption{Exemplo de rotação left - left}
-			\label{fig_pilha}
+			\caption{Exemplo de rotação left - left \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -377,8 +361,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/leftRigth.jpg}
-			\caption{Exemplo de rotação left - rigth}
-			\label{fig_pilha}
+			\caption{Exemplo de rotação left - rigth \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -391,8 +374,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/rigthrigth.jpg}
-			\caption{Exemplo de rotação right - rigth}
-			\label{fig_pilha}
+			\caption{Exemplo de rotação right - rigth \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -405,8 +387,7 @@
 		\begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 9cm]{./pic/rigthLeft.jpg}
-			\caption{Exemplo de rotação right - left}
-			\label{fig_pilha}
+			\caption{Exemplo de rotação right - left \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -431,9 +412,8 @@
 	\begin{block}{Rotação: Rigth Left}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/rigthLeft.jpg}
-			\caption{Exemplo de rotação right - left}
-			\label{fig_pilha}
+			\includegraphics[height=4cm, width = 10cm]{./pic/rigthLeft.jpg}
+			\caption{Exemplo de rotação right - left  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -443,9 +423,8 @@
 	\begin{block}{Exemplo de inserção}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/AVL_exemplo_01.jpg}
-			\caption{Exemplo de inserção}
-			\label{fig_pilha}
+			\includegraphics[height=6cm, width = 10cm]{./pic/AVL_exemplo_01.jpg}
+			\caption{Exemplo de inserção  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -454,9 +433,8 @@
 	\begin{block}{Exemplo de inserção}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/AVL_exemplo_02.jpg}
-			\caption{Exemplo de inserção}
-			\label{fig_pilha}
+			\includegraphics[height=6cm, width = 10cm]{./pic/AVL_exemplo_02.jpg}
+			\caption{Exemplo de inserção  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -465,9 +443,8 @@
 	\begin{block}{Exemplo de inserção}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/AVL_exemplo_03.jpg}
-			\caption{Exemplo de inserção}
-			\label{fig_pilha}
+			\includegraphics[height=6cm, width = 10cm]{./pic/AVL_exemplo_03.jpg}
+			\caption{Exemplo de inserção  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -476,9 +453,8 @@
 	\begin{block}{Exemplo de inserção}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/AVL_exemplo_04.jpg}
-			\caption{Exemplo de inserção}
-			\label{fig_pilha}
+			\includegraphics[height=6cm, width = 10cm]{./pic/AVL_exemplo_04.jpg}
+			\caption{Exemplo de inserção  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -487,9 +463,8 @@
 	\begin{block}{Exemplo de inserção}
 		\begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=3cm, width = 9cm]{./pic/AVL_exemplo_05.jpg}
-			\caption{Exemplo de inserção}
-			\label{fig_pilha}
+			\includegraphics[height=6cm, width = 10cm]{./pic/AVL_exemplo_05.jpg}
+			\caption{Exemplo de inserção  \cite{GEEKS_2018}}
 		\end{figure}
 	\end{block}
 \end{frame}
