ajustes finos nos slides da disciplina TCC2

--- a/SecoesComuns/Apresentacao/apresentacao.tex
+++ b/SecoesComuns/Apresentacao/apresentacao.tex
@@ -7,7 +7,7 @@
 		\end{itemize}
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=5cm, width = 9cm]{./pic/image3460.png}
+			\includegraphics[height=4cm, width = 7cm]{./pic/image3460.png}
 			\caption{Ministrando uma palestra no Peru e trabalhando na Argentina}
 			\label{fig_adilson_argentina}
 		\end{figure}
@@ -53,7 +53,7 @@
 			\item Nome
 			\item Graduação / pós-graduação
 			\item Trabalho
-			\item Qual sua experiência com programação e estruturas de dados?
+			\item Qual sua experiência com os tópicos dessa disciplina?
 		\end{itemize}
 	\end{block}
 \end{frame}
@@ -61,7 +61,7 @@
 \begin{frame}	
 	\begin{block}{Expectativas}
 		\begin{itemize}
-			\item Quais expectativas com relação à matéria de: “técnicas de programação para games”?
+			\item Quais expectativas com relação à disciplina?
 			\item O que deve ser evitado?
 			\item (E-Mail: 0800dirso@gmail.com)
 		\end{itemize}
