--- a/SecoesComuns/Contato/contato.tex
+++ b/SecoesComuns/Contato/contato.tex
@@ -8,7 +8,7 @@
 			\item Phone: $+55 11 9444-26191$
 			\item \href{https://www.linkedin.com/in/adilson-khouri-51893918/}{\color{blue}{Linkedin}}
 			\item \href{http://lattes.cnpq.br/2654721135214993}{\color{blue}{Lattes}}
-			\item \href{https://github.com/khouri/Apresentacao_Cusco}{\color{blue}{GitHub}}
+			\item Slides da disciplina aqui: \href{https://github.com/khouri/}{\color{blue}{GitHub}}
 		\end{itemize}
 	\end{block}
 \end{frame}
