--- a/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Introducao/introducao.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Introducao/introducao.tex
@@ -4,10 +4,10 @@
 	\begin{block}{Introdução e Objetivo}
 		 \begin{itemize}
 			  \item Contextualizar o leitor			
-			  \item Definir o problema a ser estudado (a principal e as secundárias)
+			  \item Definir o problema a ser estudado (o principal e os secundários)
 			  \item Qual a relevância desse trabalho para a área de conhecimento em questão (O que seu trabalho tem que o resto da literatura não tem?)
 			  \item O que você fez para resolver os problemas definidos?
-			  \item Qual a estrutura do restante do trabalho
+			  \item Qual a estrutura do restante do trabalho?
 			  \item Exemplo de artigo da revista \href{https://www.nature.com/scitable/topicpage/scientific-papers-13815490}{\color{blue}{Nature}} \cite{NATURE_2018}
 		  \end{itemize}
 	\end{block}
