--- a/TCC_02/Aulas_Fonte_Professor/Aula02/secoes/Discussao/discussao.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula02/secoes/Discussao/discussao.tex
@@ -4,7 +4,7 @@
 	\begin{block}{Discussão}
 		\begin{itemize}
 			\item Reproduzir um framework já existente de mercado é um trabalho acadêmico? Justifique
-			\item Realizar um trabalho sem correlatos com inovação é acadêmico? Justifique
+			\item Realizar um trabalho, sem capítulo de correlatos, alegando que há inovação pode ser considerado: acadêmico? Justifique
 			\item Qual tipo de fontes de informação podemos usar para trabalhos acadêmicos?  Justifique
 		\end{itemize}
 	\end{block}
