--- a/TCC_02/Aulas_Fonte_Professor/Aula03/Aula03_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula03/Aula03_TCC_02.tex
@@ -2,7 +2,7 @@
 
 \include{meta}
 
-\title[TCC II - Aula 03]{Fontes de Informação}
+\title[TCC II - Aula 03]{Gestão de processos de TI \\ TCC II Aula 03 \\ Fontes de Informação}
 \author{Professor Mestre: Adilson Lopes Khouri}
 	
 \begin{document}
@@ -11,15 +11,16 @@
 		\titlepage
 	\end{frame}
 	
-	\input{./secoes/Sumario/sumario}
+	\input{../../../SecoesComuns/Sumario/sumario}
 	
 	\input{./secoes/Cronograma/cronograma}
 	
 	\input{./secoes/BoasFontes/boasfontes}
 	
-	\input{./secoes/Duvidas/duvidas}
+	\input{../../../SecoesComuns/Duvidas/duvidas}
+
+	\input{../../../SecoesComuns/Contato/contato}
 	
-	\input{./secoes/Contato/contato}
 			
 	\begin{frame}[allowframebreaks]{}
 		\begin{block}{Referências}
