--- a/TCC_02/Aulas_Fonte_Professor/Aula04/Aula04_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula04/Aula04_TCC_02.tex
@@ -2,7 +2,7 @@
 
 \include{meta}
 
-\title[TCC II - Aula 04]{Citações}
+\title[TCC II - Aula 04]{Gestão de processos de TI \\ TCC II Aula 04 \\ Citações}
 \author{Professor Mestre: Adilson Lopes Khouri}
 	
 \begin{document}
@@ -11,7 +11,7 @@
 		\titlepage
 	\end{frame}
 	
-	\input{./secoes/Sumario/sumario}
+	\input{../../../SecoesComuns/Sumario/sumario}
 	
 	\input{./secoes/Cronograma/cronograma}
 	
@@ -19,9 +19,10 @@
 	
 	\input{./secoes/Referencias/referencias}
 		
-	\input{./secoes/Duvidas/duvidas}
+	\input{../../../SecoesComuns/Duvidas/duvidas}
+
+	\input{../../../SecoesComuns/Contato/contato}
 	
-	\input{./secoes/Contato/contato}
 		
 	\begin{frame}[allowframebreaks]{}
 		\begin{block}{Referências}
