--- a/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Citacoes/citacoes.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Citacoes/citacoes.tex
@@ -4,7 +4,7 @@
 	\begin{block}{Citações Diretas}	
 		\begin{itemize}
 			\item Transcrição literal do texto
-			\item Deve-se especificar: página, volume, tomo seção do texto original foi usado
+			\item Deve-se especificar: página, volume, tomo, seção,...  do texto original foi usado
 			\item Com até três linhas: no corpo do texto com aspas duplas
 			\item Mais de três linhas: destacada com espaçamento duplo entre ela e oi corpo do texto, fonte menor que 12 e recuo de 4 cm da margem esquerda.
 			\item Em ambos os casos se for usada apenas parte da frase original adicionar colchetes antes: [...]
