--- a/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Conclusao/conclusao.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Conclusao/conclusao.tex
@@ -5,9 +5,9 @@
 		 \begin{itemize}
 			  \item Qual a descoberta mais importante do seu trabalho?			  
 			  \item Sumarize os resultados e interprete-os em alto nível (Quem vai poder usar, onde, como?)
-			  \item Em que esses meus achados podem ser interessantes para o leitor?
-			  \item O que faltou ser estudado
-			  \item Quais as perspectivas da área de estudo
+			  \item Como/Onde minha descoberta pode ser interessantes para o leitor?
+			  \item O que faltou ser estudado?
+			  \item Quais as perspectivas da área de estudo?
 			  \item Seus achados podem beneficiar outras áreas?
 		  \end{itemize}
 	\end{block}
