--- a/TCC_02/Aulas_Fonte_Professor/Aula02/Aula02_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula02/Aula02_TCC_02.tex
@@ -2,7 +2,7 @@
 
 \include{meta}
 
-\title[TCC II - Aula 02]{Mercado x Academia}
+\title[TCC II - Aula 02]{Gestão de processos de TI \\ TCC II Aula 02 \\ Mercado x Academia}
 \author{Professor Mestre: Adilson Lopes Khouri}
 
 \begin{document}
@@ -11,7 +11,7 @@
 		\titlepage
 	\end{frame}
 	
-	\input{./secoes/Sumario/sumario}
+	\input{../../../SecoesComuns/Sumario/sumario}
 	
 	\input{./secoes/Cronograma/cronograma}
 	
@@ -21,9 +21,10 @@
 	
 	\input{./secoes/Discussao/discussao}
 					
-	\input{./secoes/Duvidas/duvidas}
+	\input{../../../SecoesComuns/Duvidas/duvidas}
 
-	\input{./secoes/Contato/contato}
+	\input{../../../SecoesComuns/Contato/contato}
+	
 
 	\begin{frame}[allowframebreaks]{}
 		\begin{block}{Referências}
