--- a/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Cronograma/cronograma.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Cronograma/cronograma.tex
@@ -6,10 +6,10 @@
 		\begin{tabular}{|l|l|}
 		\hline
 		\textbf{Aula} & \textbf{Conteúdo}  \\ \hline
-		 05/11/2018 & Estrutura do trabalho acadêmico \\ \hline	
-		 12/11/2018  & Trabalho acadêmico x Trabalhos indústria  \\ \hline	
-		  26/11/2018 & Fontes de informação  \\ \hline	
-		 \rowcolor{yellow} 03/12/2018 & Citações \\ \hline 		 		 
+		 Aula 01 & Estrutura do trabalho acadêmico \\ \hline	
+		 Aula 02  & Trabalho acadêmico x Trabalhos indústria  \\ \hline	
+		 Aula 03 & Fontes de informação  \\ \hline	
+		 \rowcolor{yellow} Aula 04 & Citações \\ \hline 		 		 
 		\end{tabular}
 	\end{table}
 \end{block}
