--- a/SecoesComuns/Apresentacao/apresentacao.tex
+++ b/SecoesComuns/Apresentacao/apresentacao.tex
@@ -30,7 +30,8 @@
 			  \item Um ano de estágio em docência na USP
 			  \item Publicações Científicas
 			  \item Orientação de iniciação científica
-			  \item Disciplina de Técnicas de programação em Games no SENAC
+			  \item Disciplina: "Técnicas de programação em Games" (SENAC)
+			  \item Disciplina: "TCC 2"	(SENAC)
 		  \end{itemize}
 	\end{block}
 \end{frame}
@@ -61,7 +62,7 @@
 \begin{frame}	
 	\begin{block}{Expectativas}
 		\begin{itemize}
-			\item Quais expectativas com relação à disciplina?
+			\item Quais expectativas?
 			\item O que deve ser evitado?
 			\item (E-Mail: 0800dirso@gmail.com)
 		\end{itemize}
